--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Notes"
         tools:targetApi="31">
         <activity
-            android:name=".NoteDetailsActivity"
+            android:name=".AddNote"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
